# mcpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.mak  Package.swift  README.md  configed.H  directive.c  eval.c  expand.c  internal.H  main.c  mcpp.gyp  mcpp_main.c  support.c  system.H  system.c
.github/actions/build-rpm-package/: action.yml
.github/workflows/: build-nuget-packages.yml  build-release.yml  build-rpm-packages.yml  build-rpm-release.yml  ci.yml  publish-nuget-packages.yml  publish-release.yml  publish-rpm-packages.yml
msbuild/: .gitignore  BUILDING.md  README.ZeroC.Mcpp.md  README.v100.md  README.v110.md  README.v120.md  README.v140.md  README.v141.md  README.v142.md  README.v143.md  mcpp.nuget.targets  mcpp.proj  mcpp.v100.nuspec  mcpp.v100.targets  mcpp.v110.nuspec  mcpp.v110.targets  mcpp.v120.nuspec  mcpp.v120.targets  mcpp.v140.nuspec  mcpp.v140.targets  mcpp.v141.nuspec  mcpp.v142.nuspec  mcpp.v143.nuspec  mcpp.v143.targets  mcpp.vcxproj
msbuild/ZeroC.Mcpp/: README.md  ZeroC.Mcpp.nuspec  ZeroC.Mcpp.targets
msbuild/mcpp.v100/: README.md  mcpp.v100.nuspec  mcpp.v100.targets
msbuild/mcpp.v110/: README.md  mcpp.v110.nuspec  mcpp.v110.targets
msbuild/mcpp.v120/: README.md  mcpp.v120.nuspec  mcpp.v120.targets
msbuild/mcpp.v140/: README.md  mcpp.v140.nuspec  mcpp.v140.targets
msbuild/mcpp.v142/: README.md  mcpp.v142.nuspec  mcpp.v142.targets
msbuild/mcpp.v143/: README.md  mcpp.v143.nuspec
noconfig/: vc2010.dif
packaging/rpm/: build-package.sh  mcpp.spec  sign-package.sh
packaging/rpm/docker/rhel10/: Dockerfile
packaging/rpm/docker/rhel9/: Dockerfile
src/: support.c  system.c
